--- a/doc/report.tex
+++ b/doc/report.tex
@@ -328,16 +328,28 @@ vac\'ios, sin datos.
 
 \subsubsection{HPCC}
 
-El benchmark HPC Challenge (HPCC) es un conjunto de m\'ultiple micro
-benchmarks utilizados frecuentemente para medir el rendimiento de un sistema
-de c\'omputo. Entre ellos STREAM, HPL, Ping Pong, transformadas de
-{\it Fourier} y otros.
+El benchmark HPC Challenge \cite{hpcc} (HPCC) es internamente un conjunto de
+varios benchmarks de-facto para medir el rendimiento de un sistema de
+c\'omputo. Entre ellos STREAM, HPL, Ping Pong, transformadas de {\it Fourier}
+y otros.
 
-La mejor m\'aquina depende de la aplicaci\'on a ejecutar, algunas aplicaciones
+\bigskip
+
+En un principio se utilizaba solamente Linpack para calcular la potencia
+de calculo de una supercomputadora, pero luego se determino que la mejor
+m\'aquina depende de la aplicaci\'on a ejecutar, algunas aplicaciones
 necesitan mejor ancho de banda de memoria, mejor canales de comunicaci\'on, o
 la mayor capacidad de c\'omputo posible.
 
+\bigskip
+
+Por ello este benchmark muestra diferentes resultados que son representativos
+y puestos en consideraci\'on de acuerdo al tipo de aplicaci\'on en discusi\'on.
+
 % TBD: insertar cuadro de localidad espacial y temporal
+
+Para una mejor comparacion de resultados, se utilizan diagramas denominados
+{\it kiviats}.
 
 \begin{verbatim}
 This is the DARPA/DOE HPC Challenge Benchmark version 1.2.0 October 2003
@@ -1038,6 +1050,11 @@ varios ciclos de optimizaci\'on.
   \emph{HPL - A Portable Implementation of the High-Performance Linpack
     Benchmark for Distributed-Memory Computers}, {\tt http://www.netlib.org/benchmark/hpl}
   2008.
+
+\bibitem{hpcc}
+  Dongarra, J., Luszczek, P.,
+  \emph{Introduction to the HPC Challenge Benchmark Suite}, ICL Technical Report,
+  2005.  
   
 \bibitem{parallel-programming}
   Paul E. McKenney,
