added fourier reference

--- a/doc/report.tex
+++ b/doc/report.tex
@@ -92,6 +92,13 @@ puede determinar que los sistemas de memoria distribu\'ida corriendo sobre
 GNU/Linux son los m\'as uitlizados. Tambi\'en denominados sistemas Beowulf
 \cite{beowulf}.
 
+\bigskip
+
+Se trata tambi\'en de resumir la experiencia que debe realizar cualquier
+individuo en busca de las diferentes alternativas para el an\'alisis de
+rendimiento. Incluyendo la prueba de herramientas y la definici\'on de un
+procedimiento rudimentario de aplicaci\'on de las mismas.
+
 \section{Estado Actual}
 
 Actualmente existe incontables herramientas para el an\'alisis de c\'odigo, la
@@ -781,10 +788,10 @@ void queen() {
 
 \section{Transformadas de {\it Fourier}}
 
-Una transformada de {\it Fourier} transforma una se\~nal digitalizada en una
-representaci\'on matem\'atica de las frecuencias que la componen.
-Su aplicaci\'on principal se da en problemas relacionados con el movimiento de
-ondas como en la \'optica y electromagnetismo.
+Una transformada de {\it Fourier} \cite{fourier} transforma una se\~nal
+digitalizada en una representaci\'on matem\'atica de las frecuencias que la
+componen. Su aplicaci\'on principal se da en problemas relacionados con el
+movimiento de ondas como en la \'optica y electromagnetismo.
 
 \bigskip
 
@@ -895,7 +902,16 @@ pendiente, otra posibilidad es reimplementar desde cero alguna aplicaci\'on
 cient\'ifica en colaboraci\'on con alg\'un grupo de investigaci\'on y realizar
 varios ciclos de optimizaci\'on.
 
+\bigskip
+
+Trabajo en conjunto con un alg\'un grupo de investigaci\'on cient\'ifica,
+realizando an\'alisis de rendimiento de aplicaciones ya existentes utilizadas
+para publicaci\'on de resultados de modelado o simulaci\'on.
+
 \begin{thebibliography}{9}
+
+\bibitem{fourier}
+  J. B. Joseph Fourier, \emph{Th\'eorie Analytique de la Chaleur}, Paris, 1822.
 
 \bibitem{mm-matrixmultiplicationtool}
   A. More,
