--- a/doc/report.tex
+++ b/doc/report.tex
@@ -765,6 +765,13 @@ contra m\'etodos artesanales de optimizaci\'on.
 
 La salida del c\'alculo puede graficarse f\'acilmente con {\it gnuplot}.
 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=12cm]{heat2d.png}
+\caption{heat2d}
+\end{center}
+\end{figure}
+
 \section{Problema de las Ocho Reinas}
 
 El dilema trata en el problema de posicionar en un tablero de ajedrez ocho
@@ -806,65 +813,38 @@ A continuaci\'on se muestra una comparaci\'on de diferentes m\'etodos, se
 demuestra claramente con este ejercicio la sofisticaci\'on de librer\'ias
 contra m\'etodos artesanales de optimizaci\'on.
 
+La siguiente es la versi\'on cl\'asica.
+
 \begin{verbatim}
-void R16SRFFT(float input[16],float output[16] ) {
-  float temp, out0, out1, out2, out3, out4, out5, out6, out7, out8;
-  float out9, out10, out11, out12, out13, out14, out15;
-  float tmp[16];
-  int i = 0;
+int i, k;
+float arg, sign = -1.0;
 
-  for ( i = 0; i < 8; i++ )
-    tmp[i] = input[i] + input[i+8]
-  for ( i = 8; i < 12; i++ )
-    tmp[i] = input[i-8] - input[i];
-  for ( i = 12; i < 16; i++ )
-    tmp[i] = input[i] - input[i-8];
-
-  temp = ( out13 - out9 ) * ( SIN_2PI_16 ); 
-
-  tmp[9] = tmp[9] * (C_P_S_2PI_16) + temp; 
-  tmp[13] = tmp[13] * (C_M_S_2PI_16) + temp;
-  
-  out14 *= ( SIN_4PI_16 ); out14 = out14 - out10;
-  out10 *= ( SIN_4PI_16 ); out10 = out14 + out10 + out10;
-  
-  temp=(out15-out11)*(SIN_6PI_16);
-
-  out11=out11*(C_P_S_6PI_16)+temp;
-  out15=out15*(C_M_S_6PI_16)+temp;
-
-  out8+=out10; out10=out8-out10-out10;
-  out9+=out11; out11=out9-out11-out11;
-
-  out12+=out14; out14=out12-out14-out14;
-  out13+=out15; out15=out13-out15-out15;
-
-  output[1]=out8+out9; output[7]=out8-out9;
-
-  output[9]=out12+out13; output[15]=out13-out12;
-  
-  output[5]=out10+out15; output[13]=out14-out11;
-  output[3]=out10-out15; output[11]=-out14-out11;
-  
-  out0=out0+out4; out4=out0-out4-out4;
-  out1=out1+out5; out5=out1-out5-out5;
-  out2+=out6; out6=out2-out6-out6;
-  out3+=out7; out7=out3-out7-out7;
-
-  output[0]=out0+out2; output[4]=out0-out2;
-  out1+=out3; output[12]=out3+out3-out1;
-
-  output[0]+=out1;  /* Real Part of X[0] */
-  output[8]=output[0]-out1-out1; /*Real Part of X[4] */
-
-  out5*=SIN_4PI_16; out7*=SIN_4PI_16;
-  out5=out5-out7; out7=out5+out7+out7;
-
-  output[14]=out6-out7; /* Imag Part of X[5] */
-  output[2]=out5+out4; /* Real Part of X[7] */
-  output[6]=out4-out5; /*Real Part of X[5] */
-  output[10]=-out7-out6; /* Imag Part of X[7] */}
+for (i = 0; i <= length/2; i++) {
+    cosine[i] = sine[i] = 0.0;
+    for (k = 0; k < length; k++) {
+        arg = 2.0 * i * M_PI * k / length;
+        sine[i] += input[k] * sign * sin(arg);
+        cos[i] += input[k] * cos(arg);
+    }
+}
 \end{verbatim}
+
+\begin{verbatim}
+int i;
+
+for (i = 0; i <= length / 2; i++) {
+    frequency[i] = 1.0 * i * rate / length;
+    magnitude[i] =
+        20.0 *
+        log10( 2.0 * sqrt(sine[i] * sine[i] + cosine[i] * cosine[i]) /
+        length);
+
+    phase[i] = 180.0 * atan2(sine[i], cosine[i]) / M_PI - 90.0;
+}
+\end{verbatim}
+
+Una implementaci\'on mas eficiente es la denominada fast fourier transform.
+Un algoritmo m\'as eficiente es el denominado {\it Goertzel}.
 
 \chapter{Conclusiones}
 
@@ -1076,6 +1056,10 @@ para publicaci\'on de resultados de modelado o simulaci\'on.
   Paul E. McKenney,
   \emph{Is Parallel Programming Hard, And, If So, What Can You Do About It?},
   January, 2011.
+
+\bibitem{gsl}
+  Free Software Foundation (FSF), \emph{GNU Scientific Library (GSL)},
+  {\tt http://www.gnu.org/software/gsl}.
 
 \end{thebibliography}
 
