--- a/trunk/doc/report.tex
+++ b/trunk/doc/report.tex
@@ -268,21 +268,18 @@ EQUIL  : yes
 ALIGN  : 8 double precision words
 -------------------------------------------------------------------------------
 - The matrix A is randomly generated for each test.
-- The following scaled residual check will be computed:
-||Ax-b||_oo / ( eps * ( || x ||_oo * || A ||_oo + || b ||_oo ) * N )
 - The relative machine precision (eps) is taken to be 1.110223e-16
 - Computational tests pass if scaled residuals are less than 16.0
 
 Column=000168 Fraction=0.005 Mflops=133122.97
 ...
 Column=025872 Fraction=0.895 Mflops=98107.60
-=============================================================
-T/V                N    NB     P     Q               Time                Gflops
--------------------------------------------------------------------------------
-WR01C2R4       28888   168     4     4             165.83             9.693e+01
--------------------------------------------------------------------------------
-||Ax-b||_oo/(eps*(||A||_oo*||x||_oo+||b||_oo)*N)=       0.0043035 ...... PASSED
-============================================================
+==========================================================================
+T/V                N   NB   P    Q             Time                 Gflops
+WR01C2R4       28888  168   4    4           165.83              9.693e+01
+--------------------------------------------------------------------------
+||Ax-b||_oo/(eps*(||A||_oo*||x||_oo+||b||_oo)*N) = 0.0043035 ...... PASSED
+==========================================================================
 Finished      1 tests with the following results:
 1 tests completed and passed residual checks,
 0 tests completed and failed residual checks,
@@ -364,8 +361,6 @@ Produced by Jack Dongarra and Piotr Luszczek
 Innovative Computing Laboratory
 University of Tennessee Knoxville and Oak Ridge National Laboratory
 See the source files for authors of specific codes.
-Compiled on Dec 20 2007 at 12:54:49
-Current time (1225739336) is Mon Nov  3 17:08:56 2008
 Begin of Summary section.
 \end{verbatim}
 
@@ -373,31 +368,13 @@ Begin of Summary section.
 \begin{verbatim}
 VersionMajor=1
 VersionMinor=2
-VersionMicro=0
-VersionRelease=f
 LANG=C
 Success=1
-sizeof_char=1
-sizeof_short=2
-sizeof_int=4
-sizeof_long=8
-sizeof_void_ptr=8
-sizeof_size_t=8
-sizeof_float=4
-sizeof_double=8
-sizeof_s64Int=8
-sizeof_u64Int=8
-sizeof_struct_double_double=16
 CommWorldProcs=3
 MPI_Wtick=1.000000e-06
 HPL_Tflops=0.0674008
 HPL_time=26.3165
 HPL_eps=1.11022e-16
-HPL_RnormI=9.6442e-11
-HPL_Anorm1=3528.16
-HPL_AnormI=3533.01
-HPL_Xnorm1=12823.1
-HPL_XnormI=4.66036
 HPL_N=13856
 HPL_NB=64
 HPL_nprow=1
@@ -409,26 +386,6 @@ HPL_cpfact=C
 HPL_crfact=R
 HPL_ctop=1
 HPL_order=R
-HPL_dMACH_EPS=1.110223e-16
-HPL_dMACH_SFMIN=2.225074e-308
-HPL_dMACH_BASE=2.000000e+00
-HPL_dMACH_PREC=2.220446e-16
-HPL_dMACH_MLEN=5.300000e+01
-HPL_dMACH_RND=1.000000e+00
-HPL_dMACH_EMIN=-1.021000e+03
-HPL_dMACH_RMIN=2.225074e-308
-HPL_dMACH_EMAX=1.024000e+03
-HPL_dMACH_RMAX=1.797693e+308
-HPL_sMACH_EPS=5.960464e-08
-HPL_sMACH_SFMIN=1.175494e-38
-HPL_sMACH_BASE=2.000000e+00
-HPL_sMACH_PREC=1.192093e-07
-HPL_sMACH_MLEN=2.400000e+01
-HPL_sMACH_RND=1.000000e+00
-HPL_sMACH_EMIN=-1.250000e+02
-HPL_sMACH_RMIN=1.175494e-38
-HPL_sMACH_EMAX=1.280000e+02
-HPL_sMACH_RMAX=3.402823e+38
 dweps=1.110223e-16
 sweps=5.960464e-08
 HPLMaxProcs=3
@@ -438,11 +395,6 @@ StarDGEMM_Gflops=68.9053
 SingleDGEMM_Gflops=70.2692
 PTRANS_GBs=0.794254
 PTRANS_time=0.479293
-\end{verbatim}
-\end{minipage}
-\hspace{0.5cm}
-\begin{minipage}[b]{0.5\linewidth}
-\begin{verbatim}
 PTRANS_residual=0
 PTRANS_n=6928
 PTRANS_nb=64
@@ -452,6 +404,11 @@ MPIRandomAccess_N=134217728
 MPIRandomAccess_time=30.4475
 MPIRandomAccess_CheckTime=14.0705
 MPIRandomAccess_Errors=0
+\end{verbatim}
+\end{minipage}
+\hspace{0.5cm}
+\begin{minipage}[b]{0.5\linewidth}
+\begin{verbatim}
 MPIRandomAccess_ErrorsFraction=0
 MPIRandomAccess_ExeUpdates=536870912
 MPIRandomAccess_GUPs=0.0176327
@@ -490,33 +447,12 @@ NaturallyOrderedRingLatency_usec=5.79357
 FFTEnblk=16
 FFTEnp=8
 FFTEl2size=1048576
-M_OPENMP=200505
-omp_get_num_threads=8
-omp_get_max_threads=8
-omp_get_num_procs=8
-MemProc=-1
-MemSpec=-1
-MemVal=-1
-MPIFFT_time0=2.14577e-06
-MPIFFT_time1=0.135205
-MPIFFT_time2=0.0328519
-MPIFFT_time3=0.0831249
-MPIFFT_time4=0.137934
-MPIFFT_time5=0.126668
-MPIFFT_time6=9.53674e-07
-CPS_HPCC_FFT_235=0
-CPS_HPCC_FFTW_ESTIMATE=0
-CPS_HPCC_MEMALLCTR=0
-CPS_RA_SANDIA_NOPT=0
-CPS_RA_SANDIA_OPT2=0
-CPS_USING_FFTW=0
 \end{verbatim}
 \end{minipage}
 
 \begin{verbatim}
 End of Summary section.
 End of HPC Challenge tests.
-Current time (1225739478) is Mon Nov  3 17:11:18 2008
 \end{verbatim}
 
 \subsubsection{DEISA}
@@ -811,9 +747,9 @@ de c\'omputo.
 
 A continuaci\'on se muestra una comparaci\'on de diferentes m\'etodos, se
 demuestra claramente con este ejercicio la sofisticaci\'on de librer\'ias
-contra m\'etodos artesanales de optimizaci\'on.
-
-La siguiente es la versi\'on cl\'asica.
+contra m\'etodos artesanales de optimizaci\'on. La siguiente es la versi\'on
+cl\'asica de una implementacion directa utilizando el algoritmo de
+{\it Cooley-Tukey}.
 
 \begin{verbatim}
 int i, k;
