--- a/trunk/doc/report.tex
+++ b/trunk/doc/report.tex
@@ -43,6 +43,13 @@
   aplicaciones utilizando una abstracci\'on simplificada de etapas, cuya
   utilizaci\'on simplifica el an\'alisis de rendimiento y su optimizaci\'on.
 
+  \bigskip
+
+  Este trabajo contribuye entonces con un resumen de las teor\'ia necesaria,
+  m\'as una descripci\'on de los herramientas de soporte disponibles como parte
+  de un proceso para analizar el rendimiento aplicado a un conjunto de
+  n\'ucleos de c\'omputo como ejemplo de aplicaci\'on.
+
 \end{abstract}
 
 \tableofcontents
