--- a/doc/report.tex
+++ b/doc/report.tex
@@ -90,6 +90,10 @@ esfuerzos de optimizaci\'on. Incluso se llega a preferir la implementaci\'on
 disponibles, optimizadas profundamente y con correctitud comprobada por el
 paso del tiempo.
 
+\bigskip
+
+{\bf TBD}
+
 \section{Alcance}
 
 Este trabajo considera principalmente los ambientes mayormente utilizados en
@@ -130,6 +134,12 @@ utilizadas. El cap\'itulo 4 ejemplifica la aplicaci\'on de una herramienta
 para obtener informaci\'on de an\'alisis. El cap\'itulo 5 concluye y el
 cap\'itulo 6 detalla posibles trabajos futuros.
 
+\bigskip
+
+Aunque una lectura de principio a fin es recomendada, se recomienda al
+impaciente ir directo a los casos de aplicacion y luego revisar los detalles
+si lo considera necesario.
+
 \chapter{An\'alisis de Rendimiento}
 
 Este cap\'itulo introduce el concepto de rendimiento y teor\'ia sobre el
@@ -139,6 +149,11 @@ an\'alisis de rendimiento.
 
 El rendimiento se caracteriza por la cantidad de trabajo de c\'omputo que se
 logra en comparaci\'on con la cantidad de tiempo y el uso de los recursos.
+
+\bigskip
+
+{\bf TBD} La definicion segun blablaes bnlabla.
+Mientras que blabl bla es blabla.
 
 \section{M\'etricas}
 
@@ -796,6 +811,14 @@ aplicaciones de c\'omputo de altas prestaciones. Discute, clasifica y detalla
 diferentes opciones en herramientas de soporte. Se demuestra su aplicaci\'on
 en varios problemas simples pero suficientemente interesantes. Propone un
 modelo simple de implementaci\'on para dimensionar las optimizaciones posibles.
+
+\bigskip
+
+{\bf TBD}
+
+\bigskip
+
+{\bf TBD}
 
 \chapter{Trabajo Futuro}
 
