--- a/trunk/doc/report.tex
+++ b/trunk/doc/report.tex
@@ -7,13 +7,9 @@
 
 \begin{document}
 
-\title{
-  Universidad Nacional de La Plata\\Facultad de Inform\'atica\\
-  \bigskip
-  Especializaci\'on en C\'omputo de Altas Prestaciones\\
-  \bigskip
-  Herramientas para el Soporte de An\'alisis de Rendimiento
-}
+\title{Universidad Nacional de La Plata\\Facultad de Inform\'atica\\ \bigskip
+  Especializaci\'on en C\'omputo de Altas Prestaciones\\ \bigskip
+  Herramientas para el Soporte de An\'alisis de Rendimiento}
 
 \author{
   Alumno: Andr\'es More - {\tt amore@hal.famaf.unc.edu.ar}\\
@@ -25,8 +21,6 @@
 \maketitle
 
 \begin{abstract}
-
-  \bigskip
 
   Este documento describe una investigaci\'on realizada como trabajo final para
   la Especializaci\'on en C\'omputo de Altas Prestaciones dictada en la
@@ -656,15 +650,36 @@ siguientes:
 
 \subsection{ejemplos}
 
-\chapter{Modelo}
-
 \chapter{Procedimiento de An\'alisis}
 
 \section{Proceso}
 
-\section{Etapas}
+Modificaciones controladas.
 
-\section{Soporte}
+\bigskip
+
+Medir. Analizar. Optimizar. Comparar.
+
+\bigskip
+
+Como medir? Benchmark repetible. Baja Desviacion. No muy rapido pero por unos
+minutos. Si hay mucha deviacion se debe repetir la medicion muchas veces y
+tomar el promedio.
+
+Como analizar? Pareto. State-of-the-art. Librerias para el mismo problema.
+
+Como dibujar un pareto? Como se entiende un pareto?
+
+Como optimizar? Librerias. Dependencias. Paralelizar.
+
+Como comparar? Antes/Despues. Repeticiones. Para utilizar informacion
+historica es preciso garantizar que el sistema siendo ejercitado es el mismo. Por ello es preferible ser cautos y ejecutar las dos versiones conjuntamente
+al momento de realizar las pruebas.
+
+\chapter{Modelo}
+
+Modelo por etapas. Facil de identificar donde realizar optimizaciones y la
+ganancia esperada. El calculo de las leyes de amdalah y demas es directo.
 
 \chapter{Casos de Estudio}
 
