--- a/doc/report.tex
+++ b/doc/report.tex
@@ -837,7 +837,8 @@ Este trabajo aporta el estado del arte del an\'alisis de rendimiento en
 aplicaciones de c\'omputo de altas prestaciones. Discute, clasifica y detalla
 diferentes opciones en herramientas de soporte. Se demuestra su aplicaci\'on
 en varios problemas simples pero suficientemente interesantes. Propone un
-modelo simple de implementaci\'on para dimensionar las optimizaciones posibles.
+proceso y un modelo simple de implementaci\'on para dimensionar las
+optimizaciones posibles.
 
 \bigskip
 
