--- a/trunk/doc/report.tex
+++ b/trunk/doc/report.tex
@@ -24,7 +24,7 @@
 
   Este documento describe una investigaci\'on realizada como trabajo final para
   la Especializaci\'on en C\'omputo de Altas Prestaciones dictada en la
-  Facultad   de Inform\'atica de la Universidad Nacional de La Plata.
+  Facultad de Inform\'atica de la Universidad Nacional de La Plata.
   El tema de investigaci\'on consiste en m\'etodos y herramientas para
   an\'alisis del comportamiento en aplicaciones de alto rendimiento.
 
@@ -39,10 +39,11 @@
 
   \bigskip
 
-  Este trabajo contribuye entonces con un resumen de las teor\'ia necesaria,
-  m\'as una descripci\'on de los herramientas de soporte disponibles como parte
-  de un proceso para analizar el rendimiento aplicado a un conjunto de
-  n\'ucleos de c\'omputo como ejemplo de aplicaci\'on.
+  Este trabajo contribuye con un resumen de las teor\'ia del analisis del
+  rendimiento m\'as una descripci\'on de los herramientas de soporte 
+  disponibles al momento. Se propone tambi\'en un proceso para analizar el
+  rendimiento, ejemplicando su aplicaci\'on a un conjunto de n\'ucleos de
+  c\'omputo como ejemplo de aplicaci\'on.
 
 \end{abstract}
 
@@ -51,19 +52,19 @@
 \chapter{Introducci\'on}
 
 Este cap\'itulo introduce este trabajo y su alcance. Luego de revisar la
-motivaci\'on del mismo, se resume el estado actual de la investigaci\'on y se
-detalla el contenido restante del informe.
+motivaci\'on de esta investigaci\'on, se resume el estado actual del an\'alisis
+del rendimiento y se detalla el contenido restante del informe.
 
 \section{Motivaci\'on}
 
 En el \'area de c\'omputo de altas prestaciones los desarrolladores son en su
-mayor\'ia los especialistas del dominio del problema a investigar, sin tener
-necesariamente conocimientos avanzados de programaci\'on y optimizaci\'on de
-rendimiento. Este hecho resulta en menos tiempo para an\'alisis de resultados
-e impacta directamente en la productividad de cualquier grupo de
-investigaci\'on. Las rutinas m\'as demandantes de c\'alculo son en su
-mayor\'ia cient\'ificas, y su complejidad s\'olo hace posible su correcta
-implementaci\'on solo por especialistas en el dominio.
+mayor\'ia los especialistas del dominio del problema a investigar, las rutinas
+m\'as demandantes de c\'alculo son en su mayor\'ia cient\'ificas, y su
+complejidad hace posible su correcta implementaci\'on solo por especialistas
+en el dominio. Sin tener necesariamente conocimientos avanzados
+de programaci\'on y de optimizaci\'on de rendimiento. Este hecho resulta en
+menos tiempo para an\'alisis de resultados e impacta directamente en la
+productividad de cualquier grupo de investigaci\'on.
 
 \bigskip
 
